knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Amount_Type_Association__c/fields/pqcrush__White_Space_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__White_Space_Amount_Type__c</fullName>
    <label>Cross-Sell Amount Type</label>
    <referenceTo>pqcrush__White_Space_Amount_Type__c</referenceTo>
    <relationshipLabel>White Space Amount Type Associations</relationshipLabel>
    <relationshipName>White_Space_Amount_Type_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>